# e_invoice_pt

./: .gitignore  README.md  pyproject.toml
e_invoice_acq/: df_read.py
e_invoice_acq/cli/: config.py  group.py  main.py
e_invoice_acq/df_apply/: clean_money.py
e_invoice_acq/df_schemas/: invoice_df.py
