[tool.poetry]
name = "e-invoice-acq"
version = "0.1.0"
description = "Invoice analytics from CSV explain the Purchaser's role in the process required for provisional IRS deductions."
authors = ["Carlos Moreno <dev@seekingaura.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.8"

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.typing.dependencies]
pandera = {extras = ["mypy"], version = "^0.22.1"}

[tool.poetry.scripts]
e_invoice = "e_invoice_acq.cli.main:cli" # entrypoint to CLI

[tool.black]
line-length = 119

[tool.isort]
force_grid_wrap = 2
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
